# qbc8-superstore

./: .gitignore  README.md  flake.nix  pyproject.toml  team.txt
data/ML/: y_profit_true.csv
notebooks/: Models.ipynb  Superstore.ipynb
notebooks/.ipynb_checkpoints/: Superstore-checkpoint.ipynb
