[tool.poetry]
name = "qbc8-superstore"
version = "0.1.0"
description = "Quera qbc8 Data Analysis Second Project, \"Superstore\" by Group4"
authors = ["L0L1P0P1 <behradbadeli@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
